--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@
 !/log/.keep
 !/tmp/.keep
 
+# Allows RSpec to persist some state between runs in order to support
+# the `--only-failures` and `--next-failure` CLI options. We recommend
+# you configure your source control system to ignore this file.
+/spec/examples.txt
+
 /node_modules
 /yarn-error.log
 
