--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^7.1.2",
-    "babel-core": "^6.25.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "7.x",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "coffee-loader": "^0.7.3",
     "coffee-script": "^1.12.7",
     "compression-webpack-plugin": "^1.0.0",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "glob": "^7.1.2",
@@ -28,8 +28,10 @@
     "style-loader": "^0.18.2",
     "vue": "^2.4.2",
     "vue-loader": "^13.0.4",
+    "vue-resource": "^1.3.4",
     "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.5.4",
+    "vue-turbolinks": "^2.0.0",
+    "webpack": "^3.5.5",
     "webpack-manifest-plugin": "^1.3.1",
     "webpack-merge": "^4.1.0"
   },
