Clean up rollback

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 # Allows RSpec to persist some state between runs in order to support
 # the `--only-failures` and `--next-failure` CLI options. We recommend
 # you configure your source control system to ignore this file.
-/spec/examples.txt
+/spec/status.txt
 
 /node_modules
 /yarn-error.log
