--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,6 @@ default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: localhost
-  username: bodega
   timeout: 5000
 
 development:
@@ -25,3 +24,5 @@ test:
 production:
   <<: *default
   database: bodega_production
+  username: <%= ENV['PG_USER'] %>
+  password: <%= ENV['PG_PASS'] %>
