Add SSL settings to nginx.conf

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -28,4 +28,9 @@ server {
   error_page 500 502 503 504 /500.html;
   client_max_body_size 10M;
   keepalive_timeout 10;
+
+  listen 443 ssl; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/bodega.ryanlue.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/bodega.ryanlue.com/privkey.pem; # managed by Certbot
+  include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 }
