Hotfix for nginx.conf (remove default_server)

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,7 +3,7 @@ upstream puma {
 }
 
 server {
-  listen 80 default_server deferred;
+  listen 80 deferred;
   # server_name example.com;
 
   root /home/rlue/apps/bodega/current/public;
