Hotfix for nginx.conf (add server_name)

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream puma {
 
 server {
   listen 80 deferred;
-  # server_name example.com;
+  server_name bodega.ryanlue.com;
 
   root /home/rlue/apps/bodega/current/public;
   access_log /home/rlue/apps/bodega/current/log/nginx.access.log;
